feat: add complete Twilio integration for voice calls and SMS
- Add Twilio voice call functionality with TwiML generation
- Implement SMS sending with alerts, confirmations, and reminders
- Auto-load .env file for seamless credential management
- Add comprehensive test_twilio.py for end-to-end testing
- Support interactive voice responses with speech and DTMF input
- Generate contextual TwiML for greetings, defect explanations, and Q&A
- Include appointment confirmation and service reminder SMS
- Add python-dotenv dependency for environment variable management
- Fix credential loading in test scripts

--- a/functions/agents/communication/.env.example
+++ b/functions/agents/communication/.env.example
@@ -1,3 +1,9 @@
+# Twilio Configuration
+# Get credentials from: https://console.twilio.com
+TWILIO_ACCOUNT_SID=AC6bad0c817386de999b7b2b164953279a
+TWILIO_AUTH_TOKEN=FWaa63847a93c2728b7a55efd09e0b9c7b
+TWILIO_PHONE_NUMBER=+18168269272
+
 # LLM Configuration Template
 # Copy relevant values to your .env file
 
@@ -17,3 +23,7 @@ GEMINI_MODEL=gemini-1.5-flash
 # Optional Settings
 LLM_TEMPERATURE=0.7
 LLM_MAX_TOKENS=500
+
+# Testing (Optional)
+# TEST_PHONE_NUMBER=+919876543210
+# TWILIO_CALLBACK_URL=https://your-server.com/voice/callback
