--- a/functions/agents/communication/requirements.txt
+++ b/functions/agents/communication/requirements.txt
@@ -1,6 +1,7 @@
 pydantic>=2.0.0
 python-dateutil>=2.8.0
 twilio>=8.0.0
+python-dotenv>=1.0.0
 
 # LLM Providers (install the ones you want to use)
 google-generativeai>=0.3.0
