Fix Firebase deployment: Copy firebase.json to root before deployment
- Removed unsupported firebaseJsonPath parameter
- Added step to copy deployment/firebase.json to root directory
- Firebase action expects firebase.json in the root by default

--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -48,6 +48,9 @@ jobs:
           NEXT_PUBLIC_FIREBASE_APP_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_APP_ID }}
           NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID }}
 
+      - name: Copy firebase.json to root
+        run: cp deployment/firebase.json ./firebase.json
+
       - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
@@ -55,5 +58,4 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}'
           channelId: live
           projectId: navigo-27206
-          firebaseJsonPath: deployment/firebase.json
 
