--- a/backend/functions/communication_agent/requirements.txt
+++ b/backend/functions/communication_agent/requirements.txt
@@ -1,7 +1,5 @@
 google-cloud-firestore==2.13.1
 google-cloud-pubsub==2.18.4
-google-cloud-bigquery==3.13.0
 functions-framework==3.5.0
-google-cloud-aiplatform==1.38.1
-pytz==2024.1
+twilio>=8.0.0
 
