--- a/frontend/vehicle-care-2/firebase.json
+++ b/frontend/vehicle-care-2/firebase.json
@@ -8,6 +8,10 @@
     ],
     "rewrites": [
       {
+        "source": "!/_next/**",
+        "destination": "/index.html"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
