--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -68,5 +68,4 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}'
           channelId: live
           projectId: navigo-27206
-          target: navigo-27206
-          workingDirectory: ./frontend/vehicle-care-2
+          entryPoint: ./frontend/vehicle-care-2
