--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -59,7 +59,37 @@ jobs:
             echo "❌ Error: index.html not found in build output"
             exit 1
           fi
+          if [ ! -d "out/_next/static" ]; then
+            echo "❌ Error: _next/static directory not found in build output"
+            exit 1
+          fi
+          JS_COUNT=$(find out/_next/static -name "*.js" | wc -l)
+          if [ "$JS_COUNT" -eq 0 ]; then
+            echo "❌ Error: No JS files found in _next/static"
+            exit 1
+          fi
           echo "✅ Build output verified"
+          echo "📊 Found $JS_COUNT JS files in _next/static"
+          echo "📁 Sample JS files:"
+          find out/_next/static -name "*.js" | head -5
+          echo "📁 Directory structure:"
+          ls -la out/ | head -10
+          echo "📁 _next directory:"
+          ls -la out/_next/ 2>/dev/null || echo "Cannot list _next"
+
+      - name: List files to be deployed
+        working-directory: ./frontend/vehicle-care-2
+        run: |
+          echo "📦 Files in out/ directory:"
+          find out -type f | head -20
+          echo ""
+          echo "📦 _next/static files:"
+          find out/_next/static -type f | head -10
+          echo ""
+          echo "📊 Total files to deploy:"
+          find out -type f | wc -l
+          echo "📊 Total JS files:"
+          find out -name "*.js" | wc -l
 
       - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
