--- a/frontend/vehicle-care-2/firebase.json
+++ b/frontend/vehicle-care-2/firebase.json
@@ -3,7 +3,6 @@
     "public": "out",
     "ignore": [
       "firebase.json",
-      "**/.*",
       "**/node_modules/**"
     ],
     "rewrites": [
@@ -14,6 +13,15 @@
     ],
     "headers": [
       {
+        "source": "/_next/**",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=31536000, immutable"
+          }
+        ]
+      },
+      {
         "source": "**/*.@(js|css|jpg|jpeg|gif|png|svg|webp|ico|woff|woff2|ttf|eot)",
         "headers": [
           {
@@ -22,7 +30,9 @@
           }
         ]
       }
-    ]
+    ],
+    "cleanUrls": false,
+    "trailingSlash": false
   },
   "firestore": {
     "rules": "firestore.rules"
